Refactored to fetch data from json file for improved performance. Also additional styling adjustments to refine layout and prevent page shift with scrollbar.'

--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -71,6 +71,9 @@ $font-tertiary: "Barlow Condensed", sans-serif;
   @media (max-width: $md) {
     font-size: rem(16);
   }
+  @media (max-width: $sm) {
+    font-size: rem(28);
+  }
 }
 @mixin text-preset-7 {
   font-family: $font-tertiary;
@@ -141,6 +144,10 @@ $lg: rem(992);
   color: unset;
   text-decoration: unset;
   border: none;
+}
+
+html {
+  scrollbar-gutter: stable;
 }
 
 body {
