--- a/styles/sass/destination.scss
+++ b/styles/sass/destination.scss
@@ -57,29 +57,31 @@ main {
     }
   }
   > div {
-    display: flex;
     flex: 1;
-    align-items: center;
+    display: flex;
+    justify-content: space-between;
     gap: base.$spacing-400;
+    padding: base.$spacing-1600 0;
     @media (max-width: base.$lg) {
       flex-direction: column;
+      align-items: center;
+      padding: base.$spacing-400 0;
+    }
+    @media (max-width: base.$sm) {
+      padding: 0;
     }
     img {
-      width: base.rem(480);
-      height: base.rem(480);
-      box-sizing: content-box;
-      padding: base.$spacing-300;
+      max-width: base.rem(480);
+      max-height: base.rem(480);
       @media (max-width: base.$lg) {
         width: base.rem(300);
         height: base.rem(300);
         margin: base.rem(42) auto;
-        padding: 0;
       }
       @media (max-width: base.$sm) {
         width: base.rem(150);
         height: base.rem(150);
-        margin: base.rem(42) auto;
-        padding: 0;
+        margin: base.rem(26.5) auto;
       }
     }
     > div {
@@ -87,14 +89,11 @@ main {
       display: flex;
       flex-direction: column;
       gap: base.$spacing-500;
-      box-sizing: content-box;
-      padding: base.$spacing-500;
       @media (max-width: base.$lg) {
         max-width: base.rem(514);
         gap: base.$spacing-300;
         align-items: center;
         text-align: center;
-        padding: 0;
       }
       nav {
         ul {
@@ -136,6 +135,9 @@ main {
         width: 100%;
         display: flex;
         gap: base.$spacing-300;
+        @media (max-width: base.$sm) {
+          flex-direction: column;
+        }
         > div {
           flex: 1;
           @media (max-width: base.$lg) {
