--- a/styles/stylesheets/crew.css
+++ b/styles/stylesheets/crew.css
@@ -7,6 +7,10 @@
   border: none;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   font-family: "Barlow", sans-serif;
   font-size: 1.125rem;
